# serde-json-schema

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
examples/: address.schema.json  simple.rs  usage.rs
src/: error.rs  id.rs  lib.rs  property.rs  specification.rs  validation.rs
test/: address.missing.json  green_door.json  green_door.schema.json  green_door.wrong_number_types.json  root_array.json  root_array.schema.json
tests/: basics.rs  lib.rs  numbers.rs  parse_examples.rs  spec.rs  validation.rs
tests/fixtures/: address.json  address.missing-non-required.json  address.wrong-type.json  any.schema.json  ref.schema.json  root_array.json
