[package]
name = "serde-json-schema"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
repository = "https://github.com/hoodie/serde-json-schema"
edition = "2018"
documentation = "https://docs.rs/serde-json-schema"
description = "minimal json-schema type"

license = "MIT/Apache-2.0"
readme = "README.md"
include = [
  "README.md",
  "Cargo.toml",
  "src/*.rs",
  "tests/*.rs"
]

[dependencies]
json-pointer = "0.3"

[dependencies.url]
version = "2.1"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
